--- a/index.html
+++ b/index.html
@@ -5,3 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Мой проект</title>
 </head>
+<body>
+</body>
+</html>
